# cocooncms

./: .dockerignore  .gitignore  Dockerfile  data.json  db.sqlite3  docker-compose.yml  fly.toml  gunicorn.conf.py  manage.py  pyproject.toml  supabase
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html
cocooncms/: settings.py  urls.py  wsgi.py
cocooncms/settings/: base.py  dev.py
cocooncms/templates/: base.html
content/: models.py
content/migrations/: 0001_initial.py
content/templates/content/: content_index_page.html  content_page.html
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
