[project]
name = "cocooncms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "wagtail>=7.0.1",
]
